Service text now displays on screen. Needs to be formatted. Date selection needs to be added, plus remaining lectionary months, and then Collect reading in & display to FINISH!

--- a/ACNADailyPrayer/ACNADailyPrayer/ServicePage.xaml
+++ b/ACNADailyPrayer/ACNADailyPrayer/ServicePage.xaml
@@ -4,12 +4,17 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
+             xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
+             ios:Page.UseSafeArea="true"
              x:Class="ACNADailyPrayer.Page1">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+            <ScrollView>
+            <Label x:Name="serviceTextLabel" 
+                Text="{Binding .}"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
+            </ScrollView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
