Lectionary files now in-place & tested for Sep, Jan, & Feb. Error handling in-place if there is no Internet connection to load the service/readings. ACNA logo is now stored and loaded locally on main screen.
TODO:

- Solution for apocryphal readings (possibly a local cache?).
- Collect importing and choosing based on date.
- Option to read Psalms from BCP 2019 Psalter.
- Test on various devices.

--- a/ACNADailyPrayer/ACNADailyPrayer/MainPage.xaml
+++ b/ACNADailyPrayer/ACNADailyPrayer/MainPage.xaml
@@ -6,7 +6,10 @@
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
             ios:Page.UseSafeArea="true"
              mc:Ignorable="d"
-             x:Class="ACNADailyPrayer.MainPage">
+             x:Class="ACNADailyPrayer.MainPage"
+            xmlns:local="clr-namespace:ACNADailyPrayer;assembly=ACNADailyPrayer"
+>
+    
 
     <NavigationPage.TitleView>
             <StackLayout Orientation="Horizontal">
@@ -22,7 +25,8 @@
                 <RowDefinition Height="0.67*"></RowDefinition>
                
             </Grid.RowDefinitions>
-        <Image Source="http://www.anglicanchurch.net/img/acna-header-logo.png" Grid.Row="0" Aspect="AspectFit"/>
+            <Image Source="{local:ImageResource ACNADailyPrayer.acna-header-logo.png}" Grid.Row="0" Aspect="AspectFit"/>
+            
         </Grid>
 
         <Grid VerticalOptions="CenterAndExpand">
