--- a/ACNADailyPrayer/ACNADailyPrayer/MainPage.xaml
+++ b/ACNADailyPrayer/ACNADailyPrayer/MainPage.xaml
@@ -23,10 +23,10 @@
         <Grid VerticalOptions="FillAndExpand">
             <Grid.RowDefinitions>
                 <RowDefinition Height="0.67*"></RowDefinition>
-               
+
             </Grid.RowDefinitions>
             <Image Source="{local:ImageResource ACNADailyPrayer.acna-header-logo.png}" Grid.Row="0" Aspect="AspectFit"/>
-            
+
         </Grid>
 
         <Grid VerticalOptions="CenterAndExpand">
@@ -61,6 +61,8 @@
             <Button Grid.Column ="1"
                 Text="Evening Prayer" FontSize="Medium" Clicked="EveningPrayer_Clicked" />
         </Grid>
+
+        <ActivityIndicator x:Name="loadingIndicator" Color="Red" IsRunning="False"></ActivityIndicator>
 
     </StackLayout>
 
