--- a/ACNADailyPrayer.BlazorApp/Pages/_Host.cshtml
+++ b/ACNADailyPrayer.BlazorApp/Pages/_Host.cshtml
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ACNADailyPrayer.BlazorApp</title>
+    <title>ACNA Daily Prayer</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
