--- a/ACNADailyPrayer.BlazorApp/wwwroot/css/ServiceStyle.css
+++ b/ACNADailyPrayer.BlazorApp/wwwroot/css/ServiceStyle.css
@@ -1,10 +1,19 @@
-﻿.content {
+﻿body {
+    background-color: #808080;
+}
+
+.content {
     color: #000000;
     font-family: 'Cormorant Garamond', serif;
     font-size: 120%;
+    text-align: left;
+    margin-left: 10%;
+    margin-right: 10%;
+    background-color: #ffffff
 }
 
 .serviceTitle {
+    color: #222222;
     text-align: center;
     text-decoration: underline;
     font-family: 'Cormorant Garamond', serif;
@@ -12,6 +21,8 @@
 }
 
 .elementTitle {
+    color: #444444;
+    text-align: center;
     font-family: 'Cormorant Garamond', serif;
     font-size: 130%;
 }
